--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,13 @@
 # Site settings
-title: A blog about lorem ipsum dolor sit amet
-description: A blog about lorem ipsum dolor sit amet
-# baseurl: "/particle" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+title: Jinya Gallery CMS
+description: The Jinya Gallery CMS is the Content Management System for artists
+baseurl: "https://cms.jinya.de" # the subpath of your site, e.g. /blog
 
-# User settings
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
-gplus_username:  lorem_ipsum
-
-# Google-analytics
-google-analytics:
-  id: ""
-
-exclude: ['package.json', 'src' , 'node_modules']
+exclude:
+- package.json
+- src
+- node_modules
+- yarn.lock
+- gulpfile.js
+- README.md
+- LICENSE.txt
