--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "particle",
+  "name": "jinya-site",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "author": "Jinya Developers <developers@jinya.de>",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
-  "author": "Nathan Randecker",
-  "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.18.6",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-csso": "^2.0.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.0.0"
+    "@zeit/next-sass": "^1.0.1",
+    "file-loader": "^5.0.2",
+    "next": "^9.2.2",
+    "next-react-svg": "^1.1.0",
+    "node-sass": "^4.13.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "url-loader": "^3.0.0"
   }
 }
