--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write ."
 	},
+  "dependencies": {
+    "nodemailer": "6.9.1"
+  },
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "2.0.0",
 		"@sveltejs/kit": "1.5.5",
