--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "nodemailer": "6.9.1"
   },
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "2.0.0",
+    "@sveltejs/adapter-node": "1.1.8",
 		"@sveltejs/kit": "1.5.5",
 		"eslint": "8.34.0",
 		"eslint-config-prettier": "8.6.0",
