--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ test:
   image: quay.imanuel.dev/dockerhub/library---node:latest
   stage: test
   script:
-    - npm install --force
+    - npm install
     - npm run lint
     - npm run build
 
