Update for harbor

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - build
 
 test:
-  image: quay.imanuel.dev/dockerhub/library---node:latest
+  image: harbor.ulbricht.casa/proxy/library/node:latest
   stage: test
   script:
     - npm install
@@ -11,17 +11,17 @@ test:
     - npm run build
 
 docker-build:
-  image: quay.imanuel.dev/dockerhub/library---docker:stable
+  image: harbor.ulbricht.casa/proxy/library/docker:stable
   stage: build
   services:
     - docker:dind
   before_script:
-    - docker login -u "$QUAY_USER" -p "$QUAY_PASSWORD" quay.imanuel.dev
+    - docker login -u "$HARBOR_USER" -p "$HARBOR_PASSWORD" harbor.ulbricht.casa
   script:
-    - docker build --pull -t "quay.imanuel.dev/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" -f ./Dockerfile .
-    - docker tag "quay.imanuel.dev/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" "quay.imanuel.dev/jinya/jinya-site:latest"
-    - docker push "quay.imanuel.dev/jinya/jinya-site:2.0.${CI_PIPELINE_IID}"
-    - docker push "quay.imanuel.dev/jinya/jinya-site:latest"
+    - docker build --pull -t "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" -f ./Dockerfile .
+    - docker tag "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" "harbor.ulbricht.casa/jinya/jinya-site:latest"
+    - docker push "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}"
+    - docker push "harbor.ulbricht.casa/jinya/jinya-site:latest"
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
       exists:
