Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   - test
-  - build
+  - deploy
 
 test:
   image: harbor.ulbricht.casa/proxy/library/node:latest
@@ -11,15 +11,19 @@ test:
     - npm run build
 
 docker-build:
-  image: harbor.ulbricht.casa/proxy/library/docker:dind
-  stage: build
+  stage: deploy
+  image:
+    name: gcr.io/kaniko-project/executor:debug
+    pull_policy: always
+    entrypoint: [""]
   before_script:
-    - docker login -u "$HARBOR_USER" -p "$HARBOR_PASSWORD" harbor.ulbricht.casa
+    - echo $KANIKO_DOCKERHUB_AND_HARBOR > /kaniko/.docker/config.json
   script:
-    - docker build --pull -t "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" -f ./Dockerfile .
-    - docker tag "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}" "harbor.ulbricht.casa/jinya/jinya-site:latest"
-    - docker push "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}"
-    - docker push "harbor.ulbricht.casa/jinya/jinya-site:latest"
+    - /kaniko/executor
+      --context "${CI_PROJECT_DIR}"
+      --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
+      --destination "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}"
+      --destination "harbor.ulbricht.casa/jinya/jinya-site:latest"
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
       exists:
