--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "1.3.1",
 		"@sveltejs/kit": "1.24.1",
+		"svelte": "4.2.0",
 		"eslint": "8.49.0",
+		"eslint-plugin-svelte": "2.33.1",
 		"eslint-config-prettier": "9.0.0",
-		"eslint-plugin-svelte3": "4.0.0",
 		"prettier": "3.0.3",
 		"prettier-plugin-svelte": "3.0.3",
+		"@poppanator/sveltekit-svg": "4.1.3",
 		"vite": "4.4.9"
 	},
 	"type": "module"
