Update package dependencies and fix code formatting
The dependencies in package-lock.json were updated to the latest versions for '@poppanator/sveltekit-svg', '@sveltejs/adapter-node', '@sveltejs/kit', 'eslint', and others. These updates are important to incorporate any bug fixes or improved features offered by the dependencies.

The code formatting in .gitlab-ci.yml, src/routes/+error.svelte, and src/routes/+page.svelte files were fixed as per established standards to improve readability and maintain code consistency.
Finally, the URL 'harbor.ulbricht.casa/proxy/library/node:latest' in the '.gitlab-ci.yml' file was replaced with 'library/node:latest'.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ stages:
   - deploy
 
 test:
-  image: harbor.ulbricht.casa/proxy/library/node:latest
+  image: library/node:latest
   stage: test
   script:
     - npm install
