--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,13 +17,13 @@ docker-build:
     pull_policy: always
     entrypoint: ['']
   before_script:
-    - echo $KANIKO_DOCKERHUB_AND_HARBOR > /kaniko/.docker/config.json
+    - echo "{\"auths\":{\"${CI_REGISTRY}\":{\"auth\":\"$(printf "%s:%s" "${CI_REGISTRY_USER}" "${CI_REGISTRY_PASSWORD}" | base64 | tr -d '\n')\"},\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > /kaniko/.docker/config.json
   script:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "harbor.ulbricht.casa/jinya/jinya-site:2.0.${CI_PIPELINE_IID}"
-      --destination "harbor.ulbricht.casa/jinya/jinya-site:latest"
+      --destination "${CI_REGISTRY_IMAGE}:2.0.${CI_PIPELINE_IID}"
+      --destination "${CI_REGISTRY_IMAGE}:latest"
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
       exists:
