Update the fonts for jinya.de

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
 		"format": "prettier --write . && eslint . --fix"
 	},
 	"dependencies": {
+		"@fontsource/albert-sans": "^5.0.8",
+		"@fontsource/oxygen-mono": "^5.0.18",
+		"@fontsource/urbanist": "^5.0.18",
 		"nodemailer": "6.9.9"
 	},
 	"devDependencies": {
