--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
 		"format": "prettier --write . && eslint . --fix"
 	},
 	"dependencies": {
-		"@fontsource/albert-sans": "^5.0.8",
-		"@fontsource/oxygen-mono": "^5.0.18",
-		"@fontsource/urbanist": "^5.0.18",
-		"nodemailer": "6.9.9"
+		"@fontsource/albert-sans": "5.0.8",
+		"@fontsource/oxygen-mono": "5.0.18",
+		"@fontsource/urbanist": "5.0.18",
+		"nodemailer": "6.9.10"
 	},
 	"devDependencies": {
 		"@poppanator/sveltekit-svg": "4.2.1",
 		"@sveltejs/adapter-node": "4.0.1",
-		"@sveltejs/kit": "2.5.0",
+		"@sveltejs/kit": "2.5.1",
 		"@sveltejs/vite-plugin-svelte": "3.0.2",
-		"eslint": "8.56.0",
+		"eslint": "8.57.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-svelte": "2.35.1",
 		"prettier": "3.2.5",
 		"prettier-plugin-svelte": "3.2.1",
-		"svelte": "4.2.11",
+		"svelte": "4.2.12",
 		"vite": "5.1.4"
 	},
 	"type": "module"
