Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,8 +22,8 @@ docker-build:
     - /kaniko/executor
       --context "${CI_PROJECT_DIR}"
       --dockerfile "${CI_PROJECT_DIR}/Dockerfile"
-      --destination "${CI_REGISTRY_IMAGE}/ARCH:2.0.${CI_PIPELINE_IID}"
-      --destination "${CI_REGISTRY_IMAGE}/ARCH:latest"
+      --destination "${CI_REGISTRY_IMAGE}/${ARCH}:2.0.${CI_PIPELINE_IID}"
+      --destination "${CI_REGISTRY_IMAGE}/${ARCH}:latest"
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
   parallel:
