--- a/package.json
+++ b/package.json
@@ -16,17 +16,19 @@
 		"nodemailer": "6.9.14"
 	},
 	"devDependencies": {
+		"@eslint/js": "9.6.0",
 		"@poppanator/sveltekit-svg": "4.2.1",
 		"@sveltejs/adapter-node": "5.2.0",
-		"@sveltejs/kit": "2.5.17",
+		"@sveltejs/kit": "2.5.18",
 		"@sveltejs/vite-plugin-svelte": "3.1.1",
-		"eslint": "8.57.0",
+		"eslint": "9.6.0",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-plugin-svelte": "2.41.0",
+		"globals": "15.6.0",
 		"prettier": "3.3.2",
-		"prettier-plugin-svelte": " 3.2.5",
+		"prettier-plugin-svelte": "3.2.5",
 		"svelte": "4.2.18",
-		"vite": "5.3.1"
+		"vite": "5.3.2"
 	},
 	"type": "module"
 }
