--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - deploy
+  - kube
 
 build:
   image: oven/bun:latest
@@ -63,7 +64,7 @@ merge-manifests:
 trigger-kube:
   variables:
     TAG: 2.0.${CI_PIPELINE_IID}
-  stage: deploy
+  stage: kube
   trigger: server-management/main-server.ulbricht.casa/jinya.de
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
