--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 stages:
   - build
+  - docker
   - deploy
-  - kube
 
 build:
   image: oven/bun:latest
@@ -15,7 +15,7 @@ build:
       - build
 
 docker-build:
-  stage: deploy
+  stage: docker
   image:
     name: gcr.io/kaniko-project/executor:debug
     pull_policy: always
@@ -38,7 +38,7 @@ docker-build:
     - runner-${ARCH}
 
 merge-manifests:
-  stage: deploy
+  stage: docker
   needs:
     - job: docker-build
       artifacts: false
@@ -64,7 +64,7 @@ merge-manifests:
 trigger-kube:
   variables:
     TAG: 2.0.${CI_PIPELINE_IID}
-  stage: kube
+  stage: deploy
   trigger: server-management/main-server.ulbricht.casa/jinya.de
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
