--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
     "format": "prettier --write . && eslint . --fix"
   },
   "devDependencies": {
-    "@eslint/js": "9",
-    "@fontsource/albert-sans": "5",
-    "@fontsource/oxygen-mono": "5",
-    "@fontsource/urbanist": "5",
-    "@poppanator/sveltekit-svg": "5",
-    "@sveltejs/kit": "2",
-    "@sveltejs/vite-plugin-svelte": "5",
-    "eslint": "9",
-    "eslint-config-prettier": "10",
-    "eslint-plugin-svelte": "3",
-    "globals": "16",
-    "nodemailer": "6",
-    "prettier": "3",
-    "prettier-plugin-svelte": "3",
-    "svelte": "5",
-    "svelte-adapter-bun": "0.5",
-    "vite": "6"
+    "@eslint/js": "^9.29.0",
+    "@fontsource/albert-sans": "^5.2.6",
+    "@fontsource/oxygen-mono": "^5.2.6",
+    "@fontsource/urbanist": "^5.2.6",
+    "@poppanator/sveltekit-svg": "^5.0.1",
+    "@sveltejs/kit": "^2.21.5",
+    "@sveltejs/vite-plugin-svelte": "^5.1.0",
+    "eslint": "^9.29.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-svelte": "^3.9.2",
+    "globals": "^16.2.0",
+    "nodemailer": "^6.10.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-svelte": "^3.4.0",
+    "svelte": "^5.34.3",
+    "svelte-adapter-bun": "~0.5.2",
+    "vite": "^6.3.5"
   },
   "type": "module"
 }
