--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
 		"@fontsource/albert-sans": "^5.2.8",
 		"@fontsource/oxygen-mono": "^5.2.8",
 		"@fontsource/urbanist": "^5.2.7",
-		"@poppanator/sveltekit-svg": "^5.0.1",
+		"@poppanator/sveltekit-svg": "^6.0.1",
 		"@sveltejs/kit": "^2.50.2",
-		"@sveltejs/vite-plugin-svelte": "^5.1.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"eslint": "^9.39.2",
-		"eslint-config-prettier": "^10.1.8",
+		"eslint-config-prettier": "^9.1.2",
 		"eslint-plugin-svelte": "^3.14.0",
 		"globals": "^17.3.0",
-		"nodemailer": "^6.10.1",
+		"nodemailer": "8.0.0",
 		"prettier": "^3.8.1",
 		"prettier-plugin-svelte": "^3.4.1",
-		"svelte": "^5.49.2",
-		"svelte-adapter-bun": "~0.5.2",
+		"svelte": "^5.50.0",
+		"svelte-adapter-bun": "^1.0.1",
 		"vite": "^7.3.1"
 	},
 	"type": "module"
