--- a/package.json
+++ b/package.json
@@ -10,23 +10,23 @@
 		"format": "prettier --write . && eslint . --fix"
 	},
 	"devDependencies": {
-		"@eslint/js": "^9.39.2",
-		"@fontsource/albert-sans": "^5.2.8",
-		"@fontsource/oxygen-mono": "^5.2.8",
-		"@fontsource/urbanist": "^5.2.7",
-		"@poppanator/sveltekit-svg": "^6.0.1",
-		"@sveltejs/kit": "^2.50.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.4",
-		"eslint": "^9.39.2",
-		"eslint-config-prettier": "^9.1.2",
-		"eslint-plugin-svelte": "^3.14.0",
-		"globals": "^17.3.0",
-		"nodemailer": "8.0.0",
-		"prettier": "^3.8.1",
-		"prettier-plugin-svelte": "^3.4.1",
-		"svelte": "^5.50.0",
-		"svelte-adapter-bun": "^1.0.1",
-		"vite": "^7.3.1"
+		"@eslint/js": "9.39.2",
+		"@fontsource/albert-sans": "5.2.8",
+		"@fontsource/oxygen-mono": "5.2.8",
+		"@fontsource/urbanist": "5.2.7",
+		"@poppanator/sveltekit-svg": "6.0.1",
+		"@sveltejs/kit": "2.50.2",
+		"@sveltejs/vite-plugin-svelte": "6.2.4",
+		"eslint": "9.39.2",
+		"eslint-config-prettier": "9.1.2",
+		"eslint-plugin-svelte": "3.14.0",
+		"globals": "17.3.0",
+		"nodemailer": "8.0.1",
+		"prettier": "3.8.1",
+		"prettier-plugin-svelte": "3.4.1",
+		"svelte": "5.50.0",
+		"svelte-adapter-bun": "1.0.1",
+		"vite": "7.3.1"
 	},
 	"type": "module"
 }
